Конфигурация приложений/src/Task2/https-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: content-volume
          mountPath: /usr/share/nginx/html
        - name: cert-volume
          mountPath: /etc/nginx/certs
      volumes:
      - name: content-volume
        configMap:
          name: https-content
      - name: cert-volume
        secret:
          secretName: tls-secret
