Конфигурация приложений/src/Task2/https-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: https-service
spec:
  selector:
    app: https-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
