Конфигурация приложений/src/Task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
spec:
  tls:
  - hosts:
    - my-kubernetes-site.com
    secretName: tls-secret
  rules:
  - host: my-kubernetes-site.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: https-service
            port:
              number: 80
